--- a/Queuing_envelope_mg1.Rmd
+++ b/Queuing_envelope_mg1.Rmd
@@ -356,26 +356,44 @@ load_envelope_pred_v3 <- predict(model_v3, newdata = data.frame(loads_real = loa
 
 ```
 
-
-```{r echo=TRUE}
-# Plotting the observed data and the predicted values
-
-plot(load_real_pred, load_envelope_pred_v1, type = 'l', col = 'deepskyblue4', xlab = expression(rho[M/GI/1]), ylab = expression(rho[envelope]),# main = 'Quadratic Polynomial Regression',
-     lwd = 3, ylim = c(0,1))
-lines(loads_real, loads_envelope_v1, col = 'deepskyblue4', lwd = 2, lty= 5)
-lines(load_real_pred, load_envelope_pred_v2, col = 'green', lwd = 3)
-lines(loads_real, loads_envelope_v2, col = 'green', lwd = 2, lty= 5)
-lines(load_real_pred, load_envelope_pred_v3, col = 'red', lwd = 3)
-lines(loads_real, loads_envelope_v3, col = 'red', lwd = 2, lty= 5)
+```{r}
+plot(load_real_pred, load_envelope_pred_v1, type = 'l', col = 'blue', xlab = expression(rho[real]), ylab = expression(rho[env]),# main = 'Quadratic Polynomial Regression',
+     lwd = 3, ylim = c(0,1), cex.lab = 1.5)
+lines(loads_real, loads_envelope_v1, col = 'blue', lwd = 1, lty= 1)
+lines(load_real_pred, load_envelope_pred_v2, col = 'darkgreen', lwd = 2)
+lines(loads_real, loads_envelope_v2, col = 'darkgreen', lwd = 1, lty= 1)
+lines(load_real_pred, load_envelope_pred_v3, col = 'red', lwd = 2)
+lines(loads_real, loads_envelope_v3, col = 'red', lwd = 1, lty= 1)
 lines(loads_real, loads_real, col = 'black', lwd = 2, lty= 4)
+# Add labels for the vertical lines with rotated text
+legend_text_v1 <- bquote("Tri-modal: " ~ rho[env] ~ "=" ~ .(round(coef_model_v1[1], 2)) ~ "+" ~ .(round(coef_model_v1[2], 2)) * rho[real] ~ "+" ~ .(round(coef_model_v1[3], 2)) * rho[real]^2)
+
+legend_text_v2 <- bquote("AMS-IX: " ~ rho[env] ~ "=" ~ .(round(coef_model_v2[1], 2)) ~ "+" ~ .(round(coef_model_v2[2], 2)) * rho[real] ~ "+" ~ .(round(coef_model_v2[3], 2)) * rho[real]^2)
+
+legend_text_v3 <- bquote("SFMIX: " ~ rho[env] ~ "=" ~ .(round(coef_model_v3[1], 2)) ~ "+" ~ .(round(coef_model_v3[2], 2)) * rho[real] ~ "+" ~ .(round(coef_model_v3[3], 2)) * rho[real]^2)
+
+text(0.25, 0, 
+     legend_text_v1,
+     col = "blue", pos = 4, srt = 0)
+text(0.25, 0.1,
+     legend_text_v2,
+     col = "darkgreen", pos = 4, srt = 0)
+text(0.25, 0.2,
+     legend_text_v3,
+     col = "red", pos = 4, srt = 0)
+text(0.3, 0.35,
+     expression(paste(rho[real], "=", rho[env])),
+     col = "black", pos = 4, srt = 25)
+
+
 
 grid()
-legend("bottomright",c("40,576,1500","AMS-IX", "SFMIX", "Real"), 
-       col=c("deepskyblue4","green", "red", "black"), lwd=3)
 ```
 
 
 # Part 5: Checking the polinomial prediction for V4
+
+
 ```{r}
 #V4 San Francisco Metropolitan Internet Exchange (SFMIX) https://grafana.sfmix.org/public-dashboards/7dedd014679f4c798124748a24e9f5ef?orgId=1&from=now-2d&to=now
 PS_size=c(64,
@@ -468,9 +486,9 @@ r2_v3 <- summary(model_v3)$r.squared
 # Part 7: Calculate the average coefficients for the polynomial models using rounding.
 
 ```{r}
-c = round((coef_model_v1[1] + coef_model_v2[1] + coef_model_v3[1])/3, 2)
-b = round((coef_model_v1[2] + coef_model_v2[2] + coef_model_v3[2])/3, 2)
-a = round((coef_model_v1[3] + coef_model_v2[3] + coef_model_v3[3])/3, 2)
+c = round(coef_model_v3[1], 2)
+b = round(coef_model_v3[2], 2)
+a = round(coef_model_v3[3], 2)
 
 formula <- paste0("y(x) = ", c, " + ", b, "x", " + ", a, "x^2")
 
@@ -485,19 +503,18 @@ cat("Model v2: RMSE =", rmse_v2, ", R^2 =", r2_v2, "\n")
 cat("Model v3: RMSE =", rmse_v3, ", R^2 =", r2_v3, "\n")
 # Calculate RMSE and R^2 for the average polynomial model
 load = seq(0.01,0.99,0.01)
-avg_pred <- a*load^2 + b*load + c#(predict(model_v1) + predict(model_v2) + predict(model_v3))/3
+polinomial_pred_v3 <- a*load^2 + b*load + c#(predict(model_v1) + predict(model_v2) + predict(model_v3))/3
 
-rmse_avg_v1 <- sqrt(mean((loads_envelope_v1 - avg_pred)^2))
-r2_avg_v1 <- summary(lm(loads_envelope_v1 ~ avg_pred))$r.squared
+rmse_avg_v1 <- sqrt(mean((loads_envelope_v1 - polinomial_pred_v3)^2))
+r2_avg_v1 <- summary(lm(loads_envelope_v1 ~ polinomial_pred_v3))$r.squared
 
-rmse_avg_v2 <- sqrt(mean((loads_envelope_v2 - avg_pred)^2))
-r2_avg_v2 <- summary(lm(loads_envelope_v2 ~ avg_pred))$r.squared
+rmse_avg_v2 <- sqrt(mean((loads_envelope_v2 - polinomial_pred_v3)^2))
+r2_avg_v2 <- summary(lm(loads_envelope_v2 ~ polinomial_pred_v3))$r.squared
 
-rmse_avg_v3 <- sqrt(mean((loads_envelope_v3 - avg_pred)^2))
-r2_avg_v3 <- summary(lm(loads_envelope_v3 ~ avg_pred))$r.squared
-cat("Average Polynomial compare with Model Model v1: RMSE =", rmse_avg_v1, ", R^2 =", r2_avg_v1, "\n")
-cat("Average Polynomial compare with Model Model v2: RMSE =", rmse_avg_v2, ", R^2 =", r2_avg_v2, "\n")
-cat("Average Polynomial compare with Model Model v3: RMSE =", rmse_avg_v3, ", R^2 =", r2_avg_v3, "\n")
+rmse_avg_v3 <- sqrt(mean((loads_envelope_v3 - polinomial_pred_v3)^2))
+r2_avg_v3 <- summary(lm(loads_envelope_v3 ~ polinomial_pred_v3))$r.squared
+cat("V3 Polynomial compare with Model Model v1: RMSE =", rmse_avg_v1, ", R^2 =", r2_avg_v1, "\n")
+cat("V3 Polynomial compare with Model Model v2: RMSE =", rmse_avg_v2, ", R^2 =", r2_avg_v2, "\n")
 
 ```
 Mean Absolute Percent Error (MAPE), coefficient of variation (CV) , Mean absolute error (MAE)
@@ -528,32 +545,145 @@ mape_v3 <- mape(predict(model_v3), loads_envelope_v3)
 mae_v3 <- mae(predict(model_v3), loads_envelope_v3)
 
 # Calculate metrics for average polynomial model
-mape_avg_v1 <- mape(avg_pred, loads_envelope_v1)
-mae_avg_v1 <- mae(avg_pred, loads_envelope_v1)
+mape_avg_v1 <- mape(polinomial_pred_v3, loads_envelope_v1)
+mae_avg_v1 <- mae(polinomial_pred_v3, loads_envelope_v1)
 
-mape_avg_v2 <- mape(avg_pred, loads_envelope_v2)
-mae_avg_v2 <- mae(avg_pred, loads_envelope_v2)
+mape_avg_v2 <- mape(polinomial_pred_v3, loads_envelope_v2)
+mae_avg_v2 <- mae(polinomial_pred_v3, loads_envelope_v2)
 
-mape_avg_v3 <- mape(avg_pred, loads_envelope_v3)
-mae_avg_v3 <- mae(avg_pred, loads_envelope_v3)
+mape_avg_v3 <- mape(polinomial_pred_v3, loads_envelope_v3)
+mae_avg_v3 <- mae(polinomial_pred_v3, loads_envelope_v3)
 
 # Print metrics for each model and average polynomial model
 cat("Model v1: MAPE =", mape_v1, ", MAE =", mae_v1, "\n")
 cat("Model v2: MAPE =", mape_v2, ", MAE =", mae_v2, "\n")
 cat("Model v3: MAPE =", mape_v3, ", MAE =", mae_v3, "\n")
-cat("Average Polynomial Model: MAPE =", mape_avg_v1,", MAE =", mae_avg_v1, "\n")
-cat("Average Polynomial Model: MAPE =", mape_avg_v2,", MAE =", mae_avg_v2, "\n")
-cat("Average Polynomial Model: MAPE =", mape_avg_v3,", MAE =", mae_avg_v3, "\n")
+cat("V3 Polynomial Model for V1: MAPE =", mape_avg_v1,", MAE =", mae_avg_v1, "\n")
+cat("V3 Polynomial Model for V2: MAPE =", mape_avg_v2,", MAE =", mae_avg_v2, "\n")
 ```
 ```{r}
 # Plotting the observed data and the predicted values
 
-plot(loads_real, avg_pred, type = 'l', col = 'black', xlab = expression(rho[M/GI/1]), ylab = expression(rho[envelope]),# main = 'Quadratic Polynomial Regression',
+plot(loads_real, polinomial_pred_v3, type = 'l', col = 'black', xlab = expression(rho[M/GI/1]), ylab = expression(rho[envelope]),# main = 'Quadratic Polynomial Regression',
      lwd = 3, ylim = c(0,1))
 
 
 grid()
-legend("bottomright",c("Average"), 
+legend("bottomright",c("Polinomial predicted values"), 
         col=c("black"), lwd=3)
 ```
+
+# Part 9: Second numerc example
+
+## V1 tri-model:
+```{r}
+# #V1
+PS_size <- c(40, 576, 1500)  # Packet sizes in bytes
+PS_weights <- c(7, 4, 1) / 12  # Packet weights
+Capacity_Gbps = 400
+loads <- seq(0.5,0.9,0.05) # Load
+p1 = 0.99
+p2 = 0.90
+E_T_real <-  c()
+E_T_real_p1 <-  c()
+E_T_real_p2 <-  c()
+E_T_env <-  c()
+E_T_env_p1 <-  c()
+E_T_env_p2 <-  c()
+i = 1
+for (load in loads){
+  mg1_packets <- simmer_mg1(Capacity_Gbps, load, PS_size, PS_weights, k_num = 1e4)
+  cat("Load real M/G/1:", load, "\n")
+  load_env <- a*load^2 + b*load + c
+  
+  nodes_capacity_Bps = Capacity_Gbps*1e9
+  Capacity_ps = nodes_capacity_Bps/(8*N)
+  E_X = 1/Capacity_ps
+  
+  # Step 1: Determine the average delay (E(T)) 
+  E_T_real[i] <- mean(mg1_packets)*1e6
+  E_T_real_p1[i] <- quantile(mg1_packets, p1)*1e6
+  E_T_real_p2[i] <- quantile(mg1_packets, p2)*1e6
+  
+  E_T_env[i] <- E_X/(1-load_env)*1e6
+  E_T_env_p1[i] <- E_X/(1-load_env)*log(1/(1-p1))*1e6
+  E_T_env_p2[i] <- E_X/(1-load_env)*log(1/(1-p2))*1e6
+  
+  i <- i + 1
+}
+
+
+
+```
+Comparison of theoretical M/M/1 envelope and simulated M/G/1 delays for AMS-IX traffic distribution
+```{r}
+# Plot the results
+plot(loads, E_T_real, type = "l", col = "blue", lwd = 2, xlab = "Load", ylab = "Delay, us", ylim = c(0, max(E_T_real_p1, E_T_env_p1)), main = "")
+lines(loads, E_T_env, type = "l", col = "darkgreen", lwd = 2)
+lines(loads, E_T_real_p1, type = "l", col = "blue", lwd = 1, lty = 2)
+lines(loads, E_T_env_p1, type = "l", col = "darkgreen", lwd = 1, lty = 2)
+lines(loads, E_T_real_p2, type = "l", col = "blue", lwd = 1, lty = 3)
+lines(loads, E_T_env_p2, type = "l", col = "darkgreen", lwd = 1, lty = 3)
+
+legend("topleft", legend = c("M/G/1 average", "M/M/1 env average", "M/G/1 99th percentile", "M/M/1 env 99th percentile", "M/G/1 90th percentile", "M/M/1 env 90th percentile"), col = c("blue", "darkgreen", "blue", "darkgreen", "blue", "darkgreen"), lwd = c(2, 2, 1, 1, 1, 1), lty = c(1, 1, 2, 2, 3, 3))
+
+grid()
+
+```
+## V2 AMS-IX:
+
+```{r}
+#V2 https://www.ams-ix.net/ams
+PS_size=c((64+127)/2,(128+255)/2,(256+511)/2, (512+1023)/2, (1024+1513)/2, 1514, (1515+9100)/2)
+PS_weights=c(33.2/100, 5.4/100, 3.3/100, 3.7/100, 34.6/100, 14.6/100, 5.2/100)
+
+Capacity_Gbps = 400
+loads <- seq(0.5,0.9,0.05) # Load
+p1 = 0.99
+p2 = 0.90
+E_T_real <-  c()
+E_T_real_p1 <-  c()
+E_T_real_p2 <-  c()
+E_T_env <-  c()
+E_T_env_p1 <-  c()
+E_T_env_p2 <-  c()
+i = 1
+for (load in loads){
+  mg1_packets <- simmer_mg1(Capacity_Gbps, load, PS_size, PS_weights, k_num = 1e4)
+  cat("Load real M/G/1:", load, "\n")
+  load_env <- a*load^2 + b*load + c
+  
+  nodes_capacity_Bps = Capacity_Gbps*1e9
+  Capacity_ps = nodes_capacity_Bps/(8*N)
+  E_X = 1/Capacity_ps
+  
+  # Step 1: Determine the average delay (E(T)) 
+  E_T_real[i] <- mean(mg1_packets)*1e6
+  E_T_real_p1[i] <- quantile(mg1_packets, p1)*1e6
+  E_T_real_p2[i] <- quantile(mg1_packets, p2)*1e6
+  
+  E_T_env[i] <- E_X/(1-load_env)*1e6
+  E_T_env_p1[i] <- E_X/(1-load_env)*log(1/(1-p1))*1e6
+  E_T_env_p2[i] <- E_X/(1-load_env)*log(1/(1-p2))*1e6
+  
+  i <- i + 1
+}
+```
+
+Comparison of theoretical M/M/1 envelope and simulated M/G/1 delays for AMS-IX traffic distribution
+```{r}
+# Plot the results
+plot(loads, E_T_real, type = "l", col = "blue", lwd = 2, xlab = "Load", ylab = "Delay, us", ylim = c(0, max(E_T_real_p1, E_T_env_p1)), main = "")
+lines(loads, E_T_env, type = "l", col = "darkgreen", lwd = 2)
+lines(loads, E_T_real_p1, type = "l", col = "blue", lwd = 1, lty = 2)
+lines(loads, E_T_env_p1, type = "l", col = "darkgreen", lwd = 1, lty = 2)
+lines(loads, E_T_real_p2, type = "l", col = "blue", lwd = 1, lty = 3)
+lines(loads, E_T_env_p2, type = "l", col = "darkgreen", lwd = 1, lty = 3)
+
+legend("topleft", legend = c("M/G/1 average", "M/M/1 env average", "M/G/1 99th percentile", "M/M/1 env 99th percentile", "M/G/1 90th percentile", "M/M/1 env 90th percentile"), col = c("blue", "darkgreen", "blue", "darkgreen", "blue", "darkgreen"), lwd = c(2, 2, 1, 1, 1, 1), lty = c(1, 1, 2, 2, 3, 3))
+
+grid()
+
+```
+
 
